--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
             </div>
 
             <div class="top-left">
-                <!-- <div class="top-left-logo">
+                <div class="top-left-logo u-mobile">
                     <img src="./images/logo.webp" alt="לוגו" class="top-right-logo-img" width="220.703" height="46.227">
-                </div> -->
-                <p class="text-green">בעלי עסקים, הזדמנות עסקית שאסור לכם לפספס</p>
+                </div>
+                <p class="text-green u-desktop">בעלי עסקים, הזדמנות עסקית שאסור לכם לפספס</p>
+                <p class="text-green u-mobile">בעלי עסקים,<br>
+                    הזדמנות עסקית <br>
+                    שאסור לכם לפספס</p>
                 <h1 class="top-left-title"><span class="float top-left-title-above">מעל</span>30,000</h1>
                 <div class="top-left-op">
                     <h1>מכרזים</h1>
