mobile before top section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="main-section">
         <!-- TOP SECTION START-->
         <header class="top-section" id="header" aria-label="top-section">
-            <div class="top-right">
+            <div class="top-right u-desktop">
                 <div class="top-right-item">
                     <a class="top-right-image" href="#">
                         <img src="./images/5.png" alt="לוגו" class="top-right-logo-img" width="732" height="488">
@@ -52,6 +52,12 @@
                     <h1>מכרזים</h1>
                     <h2>והזדמנויות עסקיות</h2>
                 </div>
+                <div class="bg-green top-left-sale u-desktop">
+                    <p class="text-white">יפעת מכרזים בהטבה ענקית!</p>
+                </div>
+                <p class="top-left-subscribe  u-desktop">סוגרים עכשיו מנוי שנתי ונהנים מחודשיים מתנה ללא עלות</p>
+            </div>
+            <div class="u-mobile top-mobile">
                 <div class="bg-green top-left-sale">
                     <p class="text-white">יפעת מכרזים בהטבה ענקית!</p>
                 </div>
@@ -118,7 +124,9 @@
                             <p class="category">הסעדה</p>
                             <p class="number">החל מ-<span class="text-green">900 </span>מכרזים
                             </p>
-                            <p class="cta text-white bg-green"> לצפייה בכל המכרזים </p>
+                            <p class="cta text-white bg-green"> לצפייה בכל
+                                <span class="u-desktop"> המכרזים</span>
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -132,7 +140,9 @@
                             <p class="category">ניקיון</p>
                             <p class="number">החל מ-<span class="text-green">900 </span>מכרזים
                             </p>
-                            <p class="cta text-white bg-green"> לצפייה בכל המכרזים </p>
+                            <p class="cta text-white bg-green"> לצפייה בכל
+                                <span class="u-desktop"> המכרזים</span>
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -146,7 +156,9 @@
                             <p class="category">פנוי פסולת</p>
                             <p class="number">החל מ-<span class="text-green">900 </span>מכרזים
                             </p>
-                            <p class="cta text-white bg-green"> לצפייה בכל המכרזים </p>
+                            <p class="cta text-white bg-green"> לצפייה בכל
+                                <span class="u-desktop"> המכרזים</span>
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -160,7 +172,10 @@
                             <p class="category">אחזרת מבנים</p>
                             <p class="number">החל מ-<span class="text-green">900 </span>מכרזים
                             </p>
-                            <p class="cta text-white bg-green"> לצפייה בכל המכרזים </p>
+                            <p class="cta text-white bg-green"> לצפייה בכל
+                                <span class="u-desktop"> המכרזים</span>
+
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -174,7 +189,9 @@
                             <p class="category">הסעות</p>
                             <p class="number">החל מ-<span class="text-green">900 </span>מכרזים
                             </p>
-                            <p class="cta text-white bg-green"> לצפייה בכל המכרזים </p>
+                            <p class="cta text-white bg-green"> לצפייה בכל
+                                <span class="u-desktop"> המכרזים</span>
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -188,7 +205,10 @@
                             <p class="category">חשמל</p>
                             <p class="number">החל מ-<span class="text-green">900 </span>מכרזים
                             </p>
-                            <p class="cta text-white bg-green"> לצפייה בכל המכרזים </p>
+                            <p class="cta text-white bg-green"> לצפייה בכל
+                                <span class="u-desktop"> המכרזים</span>
+
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -202,7 +222,10 @@
                             <p class="category">בנייה</p>
                             <p class="number">החל מ-<span class="text-green">900 </span>מכרזים
                             </p>
-                            <p class="cta text-white bg-green"> לצפייה בכל המכרזים </p>
+                            <p class="cta text-white bg-green"> לצפייה בכל
+                                <span class="u-desktop"> המכרזים</span>
+
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -216,7 +239,10 @@
                             <p class="category">כספים וראיית</p>
                             <p class="number">החל מ-<span class="text-green">900 </span>מכרזים
                             </p>
-                            <p class="cta text-white bg-green"> לצפייה בכל המכרזים </p>
+                            <p class="cta text-white bg-green"> לצפייה בכל
+                                <span class="u-desktop"> המכרזים</span>
+
+                            </p>
                         </div>
                     </div>
                 </li>
@@ -230,7 +256,10 @@
                             <p class="category">מכרזים בתחומים נוספים</p>
                             <p class="number">החל מ-<span class="text-green">900 </span>מכרזים
                             </p>
-                            <p class="cta text-white bg-green"> לצפייה בכל המכרזים </p>
+                            <p class="cta text-white bg-green"> לצפייה בכל
+                                <span class="u-desktop"> המכרזים</span>
+
+                            </p>
                         </div>
                     </div>
                 </li>
