changing top layout

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <section class="main-section">
         <!-- TOP SECTION START-->
         <header class="top-section" id="header" aria-label="top-section">
+            <div class="footer-circle circle circle u-mobile">
+                <p class="circle-percentage">100%</p>
+                <p class="circle-text text-white">המכרזים בישראל ישירות למייל שלך</p>
+            </div>
             <div class="top-right u-desktop">
                 <div class="top-right-item">
                     <a class="top-right-image" href="#">
