mobile close to finish, carousel

--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
         <!-- CAROUSEL SECTION START-->
         <section class="carousel-section" aria-label="join-section">
             <h3 class="carousel-title">הזדמנויות עסקיות חמות עבורך</h3>
+            <div class="slick-next">
+                <img src="./images/arrow.png" alt="arrow-right" class="arrow-right">
+            </div>
             <div class="carousel">
+
                 <li class="carousel__slide">
                     <div class="carousel__slide-container">
                         <div class="icon">
@@ -307,9 +311,21 @@
             </p>
         </section>
         <!-- ADVANTAGE SECTION END-->
+
+        <!-- MOBILE CTA START-->
+        <div class="mobile-cta text-white">
+            <a href="tel:03-5635050" class="mobile-cta-right  bg-green">
+                <img src="./images/trash.webp" alt="טלפון" class="mobile-cta-right-icon" width="30" height="30"
+                    load="lazy">
+                <p class="mobile-cta-title">חייגו לנציג</p>
+            </a>
+            <div class="mobile-cta-left bg-black">
+                <a href="#" class=" text-white">להשארת פרטים לחצו כאן</a>
+            </div>
+        </div>
+        <!-- MOBILE CTA END-->
     </section>
     <!-- ABOUT SECTION END-->
-
 
     <!-- FOOTER SECTION START-->
     <footer class="footer-section" aria-label="footer-section">
