change top image size

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             </div>
             <div class="top-right u-desktop">
                 <div class="top-right-item">
-                    <a class="top-right-image" href="#">
-                        <img src="./images/5.png" alt="לוגו" class="top-right-logo-img" width="732" height="488">
-                    </a>
+                    <!-- <a class="top-right-image" href="#"> -->
+                    <img src="./images/5.png" alt="לוגו" class="top-right-logo-img" width="732" height="488">
+                    <!-- </a> -->
                 </div>
             </div>
 
