add picture to optimize speed and seo score

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
             <div class="top-right u-desktop">
                 <div class="top-right-item">
                     <!-- <a class="top-right-image" href="#"> -->
+                    <picture>
+                        <source media="(max-width:1000px)" srcset="./images/5.png" alt="תמונת רקע" class="main-bg"
+                            width="285" height="190">
                     <img src="./images/5.png" alt="לוגו" class="top-right-logo-img" width="732" height="488">
+                    </picture>
                     <!-- </a> -->
                 </div>
             </div>
