--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <body>
     <section class="main-section">
         <!-- TOP SECTION START-->
+        <div class="bg">
+        <img src="./images/pie.webp" alt="פאי" class="bg-float u-desktop" width="374" height="374">
         <header class="top-section" id="header" aria-label="top-section">
             <div class="footer-circle circle circle u-mobile">
                 <p class="circle-percentage">100%</p>
@@ -37,11 +39,10 @@
             </div>
             <div class="top-right u-desktop">
                 <div class="top-right-item">
-                    <!-- <a class="top-right-image" href="#"> -->
                     <picture>
-                        <source media="(max-width:1000px)" srcset="./images/5.png" alt="תמונת רקע" class="main-bg"
+                        <source media="(max-width:1000px)" srcset="./images/5.webp" alt="תמונת רקע" class="main-bg"
                             width="285" height="190">
-                    <img src="./images/5.png" alt="לוגו" class="top-right-logo-img" width="732" height="488">
+                    <img src="./images/5.webp" alt="לוגו" class="top-right-logo-img" width="732" height="488">
                     </picture>
                     <!-- </a> -->
                 </div>
@@ -278,7 +279,7 @@
             </div>
         </section>
         <!-- CAROUSEL SECTION END-->
-
+</div>
         <!-- ABOUT SECTION END-->
         <section class="about-section" aria-label="how-section">
             <div class="about-right">
