--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="main-section">
         <!-- TOP SECTION START-->
         <div class="bg">
-        <img src="./images/pie.webp" alt="פאי" class="bg-float u-desktop" width="374" height="374">
+        <img src="./images/pie.webp" alt="פאי" class="bg-float u-desktop" width="374" height="374" loading="lazy">
         <header class="top-section" id="header" aria-label="top-section">
             <div class="footer-circle circle circle u-mobile">
                 <p class="circle-percentage">100%</p>
@@ -283,7 +283,7 @@
         <!-- ABOUT SECTION END-->
         <section class="about-section" aria-label="how-section">
             <div class="about-right">
-                <img src="./images/brush.png" alt="למה-1" class="about-right-image" width="" height="">
+                <img src="./images/brush.png" alt="למה-1" class="about-right-image" width="430" height="215" loading="lazy">
                 <div class="centered">
                     <p class="about-title">יפעת מכרזים</p>
                     <p class="about-subtitle">מערכת המכרזים וההזדמנויות העסקיות המובילה והגדולה !בישראל</p>
