--- a/index.html
+++ b/index.html
@@ -75,50 +75,6 @@
         </header>
         <!-- TOP SECTION END-->
 
-        <!-- HIDDEN FORM START-->
-        <!-- <div class="overlay" style="display:none;"> </div>
-        <div class="contactform" style="/* display:none; */">
-            <div class="close"> סגור </div>
-            <div id="form" class="form col-md-12 col-xs-12">
-                <h1>בוא נתחיל!</h1>
-                <h2>שלב ראשון: השאירו פרטים בטופס מטה</h2>
-                <form id="form_bottom" class="form">
-                    <input type="hidden" id="uid" name="uid" value="FA470709-56A1-4A8F-BC1C-4643AD78481F">
-                    <input type="hidden" id="originatingleadcode" name="originatingleadcode" value="8">
-                    <input type="hidden" id="statuscode" name="statuscode" value="15">
-                    <input type="hidden" id="term" name="pcfsystemfield50" value="" class="term">
-                    <input type="hidden" id="campaign" name="pcfsystemfield52" value="" class="campaign">
-                    <input type="hidden" id="pcfsystemfield46" value="" name="pcfsystemfield46">
-                    <div class="form-row">
-                        <select name="input_10" id="input_6_10_pop" required="">
-                            <option value="" selected="selected" class="gf_placeholder">האם אתה לקוח קיים?</option>
-                            <option value="yes">כן, מעוניין לקבל שירות</option>
-                            <option value="no">לא, אני רוצה להצטרף</option>
-                        </select>
-                    </div>
-                    <div class="form-row">
-                        <input name="accountname" id="accountname" type="text" value="" class="medium"
-                            placeholder="שם מלא">
-                    </div>
-                    <div class="form-row">
-                        <input name="telephone1" id="input_1_2" type="text" minlength="8" maxlength="10" value=""
-                            class="medium" placeholder="טלפון לחזרה" required="">
-                    </div>
-                    <div class="form-row">
-                        <input type="email" id="emailaddress1" name="emailaddress1" value="" placeholder="אימייל">
-                    </div>
-                    <div class="form-row">
-                        <input type="submit" id="submit" class="shake gform_button button" value="חזרו אליי >>">
-                    </div>
-                    <div style="display:none" class="hidepop_popup">
-                        לשירות הלקוחות חייגו 03-563-5050
-                    </div>
-                </form>
-            </div>
-        </div> -->
-        <!-- HIDDEN FORM END-->
-
-
         <!-- CAROUSEL SECTION START-->
         <section class="carousel-section" aria-label="join-section">
             <h3 class="carousel-title">הזדמנויות עסקיות חמות עבורך</h3>
@@ -332,6 +288,49 @@
     </section>
     <!-- ABOUT SECTION END-->
 
+            <!-- HIDDEN FORM START-->
+            <!-- <div class="overlay" style="display:none;"> </div>
+                    <div class="contactform" style="/* display:none; */">
+                        <div class="close"> סגור </div>
+                        <div id="form" class="form col-md-12 col-xs-12">
+                            <h1>בוא נתחיל!</h1>
+                            <h2>שלב ראשון: השאירו פרטים בטופס מטה</h2>
+                            <form id="form_bottom" class="form">
+                                <input type="hidden" id="uid" name="uid" value="FA470709-56A1-4A8F-BC1C-4643AD78481F">
+                                <input type="hidden" id="originatingleadcode" name="originatingleadcode" value="8">
+                                <input type="hidden" id="statuscode" name="statuscode" value="15">
+                                <input type="hidden" id="term" name="pcfsystemfield50" value="" class="term">
+                                <input type="hidden" id="campaign" name="pcfsystemfield52" value="" class="campaign">
+                                <input type="hidden" id="pcfsystemfield46" value="" name="pcfsystemfield46">
+                                <div class="form-row">
+                                    <select name="input_10" id="input_6_10_pop" required="">
+                                        <option value="" selected="selected" class="gf_placeholder">האם אתה לקוח קיים?</option>
+                                        <option value="yes">כן, מעוניין לקבל שירות</option>
+                                        <option value="no">לא, אני רוצה להצטרף</option>
+                                    </select>
+                                </div>
+                                <div class="form-row">
+                                    <input name="accountname" id="accountname" type="text" value="" class="medium"
+                                        placeholder="שם מלא">
+                                </div>
+                                <div class="form-row">
+                                    <input name="telephone1" id="input_1_2" type="text" minlength="8" maxlength="10" value=""
+                                        class="medium" placeholder="טלפון לחזרה" required="">
+                                </div>
+                                <div class="form-row">
+                                    <input type="email" id="emailaddress1" name="emailaddress1" value="" placeholder="אימייל">
+                                </div>
+                                <div class="form-row">
+                                    <input type="submit" id="submit" class="shake gform_button button" value="חזרו אליי >>">
+                                </div>
+                                <div style="display:none" class="hidepop_popup">
+                                    לשירות הלקוחות חייגו 03-563-5050
+                                </div>
+                            </form>
+                        </div>
+                    </div> -->
+            <!-- HIDDEN FORM END-->
+
     <!-- FOOTER SECTION START-->
     <footer class="footer-section" aria-label="footer-section">
         <div class="u-mobile close" onclick="toggleCta()">X</div>
@@ -379,14 +378,20 @@
                 <a href="#">למידע נוסף לחצ/י כאן</a>
             </div>
 
-            <div class="text-white">
-                <p>:לנציג מכירות ללא המתנה חייגו</p>
-                <a href="072-3944129">072-3944129</a>
-            </div>
-            <div class="text-white">
+            <div class="text-white contactid">
+                <p>המוקד סגור כעת 
+                    השאירו פרטים ונחזור אליכם בהקדם
+                </p>
+
                 <p>:לתמיכה טכנית או שירות לקוחות</p>
                 <a href="tel:03-5635050">03-5635050</a>
+                <!-- <p>:לנציג מכירות ללא המתנה חייגו</p>
+                <a href="072-3944129">072-3944129</a> -->
             </div>
+            <!-- <div class="text-white">
+                <p>:לתמיכה טכנית או שירות לקוחות</p>
+                <a href="tel:03-5635050">03-5635050</a>
+            </div> -->
         </form>
 
         <p id="closeOrOpen">השאירו פנייה בטופס ונחזור אליכם בהקדם :) <br></p>
@@ -406,8 +411,8 @@
 
 
 
-
-
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script type="text/javascript" src="https://onandoff.co.il/onAndOff.js"> </script>
     <script>
         function moveTo(event) { window.scrollTo(0, document.body.scrollHeight); }
     </script>
@@ -437,6 +442,9 @@
                     $('.divhidden').fadeOut(300);
                 }
             });
+
+
+             timerPlus("5e2d900e4369e40017de9383");
         });
     </script>
     <!-- <script>
