--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <body>
     <section class="main-section">
         <!-- TOP SECTION START-->
-        <div class="bg">
+        <!-- <div class="bg"> -->
+            <div class="bg"></div>
         <img src="./images/pie.webp" alt="פאי" class="bg-float u-desktop" width="374" height="374" loading="lazy">
         <header class="top-section" id="header" aria-label="top-section">
             <div class="footer-circle circle circle u-mobile">
@@ -235,7 +236,7 @@
             </div>
         </section>
         <!-- CAROUSEL SECTION END-->
-</div>
+<!-- </div> -->
         <!-- ABOUT SECTION END-->
         <section class="about-section" aria-label="how-section">
             <div class="about-right">
