--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#000">
     <meta content="width=device-width,initial-scale=1,shrink-to-fit=no" name=viewport>
     <meta content=max-image-preview:large name=robots>
-    <link rel="stylesheet" type="text/css"
-        href="https://cdn.rawgit.com/carlsednaoui/ouibounce/master/test/ouibounce.min.css">
+    <!-- <link rel="stylesheet" type="text/css"
+        href="https://cdn.rawgit.com/carlsednaoui/ouibounce/master/test/ouibounce.min.css"> -->
 
     <link defer rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="./css/index.css">
-
 </head>
 
 <body>
@@ -399,15 +398,15 @@
     </footer>
     <!-- FOOTER SECTION END-->
 
-    <!-- <script defer type="text/javascript" src="./js/scripts.min.js"></script> -->
     <script defer type="text/javascript" src="./js/scripts.js"></script>
     <script defer type="text/javascript" src="./js/jquery.min.js"></script>
 
     <script defer type="text/javascript" src="./js/slick/slick/slick.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ouibounce/0.0.11/ouibounce.min.js"></script> -->
     <!-- <script defer type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
 
 
-    <script defer type="text/javascript" src="./js/zepto.min.js"></script>
+    <!-- <script defer type="text/javascript" src="./js/zepto.min.js"></script> -->
     <!-- <script defer type="text/javascript" src="./dist/main.js"></script> -->
 
 
@@ -462,6 +461,11 @@
                 }
             });
 
+        });
+    </script> -->
+    <!-- <script>
+        var _ouibounce = ouibounce(document.getElementById('ouibounce-modal'), {
+            aggressive: true, //Making this true makes ouibounce not to obey "once per visitor" rule
         });
     </script> -->
     <script>
