fix bg position

--- a/index.html
+++ b/index.html
@@ -258,18 +258,20 @@
 
         <!-- ADVANTAGE SECTION START-->
         <section class="advantage-section">
-            <h4 class="advantage-title">!היתרונות שלנו להצלחה העסקית שלכם</h4>
-            <p class="advantage-text">
-                מאות הזדמנויות ומכרזים ממשלתיים ובלעדיים שמפורסמים רק אצלנו<br>
-                בניה, הסעדה, אחזקה, ניקיון, הסעות, ראיית חשבון וכספים, פינוי פסולת, מקרקעין, חשמל ועוד... 74 קטגוריות
-                כלכליות במשק קבלת ההזדמנויות ישירות למייל באמצעות סוכן חכם<br>
-                מכרזים מותאמים לעסקים קטנים ובינוניים <br>
-                עשרות קטגוריות בהתאם לענף בו אתם פועלים<br>
-                ליווי להגשת מכרז ראשון ע"י המומחים שלנו – ללא עלות נוספת ומודיעין עסקי חיוני נוסף לעסק שלך
-            </p>
-            <p class="advantage-dont-miss">
-                אל תפספסו את ההזדמנות!
-            </p>
+            <!-- <div class="advantage-container"> -->
+                <h4 class="advantage-title">!היתרונות שלנו להצלחה העסקית שלכם</h4>
+                <p class="advantage-text">
+                    מאות הזדמנויות ומכרזים ממשלתיים ובלעדיים שמפורסמים רק אצלנו<br>
+                    בניה, הסעדה, אחזקה, ניקיון, הסעות, ראיית חשבון וכספים, פינוי פסולת, מקרקעין, חשמל ועוד... 74 קטגוריות
+                    כלכליות במשק קבלת ההזדמנויות ישירות למייל באמצעות סוכן חכם<br>
+                    מכרזים מותאמים לעסקים קטנים ובינוניים <br>
+                    עשרות קטגוריות בהתאם לענף בו אתם פועלים<br>
+                    ליווי להגשת מכרז ראשון ע"י המומחים שלנו – ללא עלות נוספת ומודיעין עסקי חיוני נוסף לעסק שלך
+                </p>
+                <p class="advantage-dont-miss">
+                    אל תפספסו את ההזדמנות!
+                </p>
+            <!-- </div> -->
         </section>
         <!-- ADVANTAGE SECTION END-->
 
