--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     load="lazy">
                 <p class="mobile-cta-title">חייגו לנציג</p>
             </a>
-            <div class="mobile-cta-left bg-black" onclick="toggleCta()">
+            <div class="mobile-cta-left bg-black" id="ctaButton">
                 <a href="#" class=" text-white">להשארת פרטים לחצו כאן</a>
             </div>
         </div>
@@ -335,7 +335,7 @@
 
     <!-- FOOTER SECTION START-->
     <footer class="footer-section" aria-label="footer-section">
-        <div class="u-mobile close" onclick="toggleCta()">X</div>
+        <div class="u-mobile close" id="close" >X</div>
         <div class="footer-circle circle">
             <p class="circle-percentage">100%</p>
             <p class="circle-text text-white">המכרזים בישראל ישירות למייל שלך</p>
@@ -418,22 +418,7 @@
     <script>
         function moveTo(event) { window.scrollTo(0, document.body.scrollHeight); }
     </script>
-    <script>
-        const toggleCta = () => {
-            const footer = $('.footer-section');
-            const circle = $('.circle');
 
-            if ($('.footer-section:visible').length === 0) {
-                footer.fadeIn(300);
-                footer.addClass("mobile");
-
-            } else {
-                footer.fadeOut(300);
-                footer.removeClass("mobile");
-
-            }
-        }
-    </script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             let form = document.getElementById('form_main');
