delete unused css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <!-- <link rel="stylesheet" type="text/css"
         href="https://cdn.rawgit.com/carlsednaoui/ouibounce/master/test/ouibounce.min.css"> -->
 
-    <link defer rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <!-- <link defer rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" /> -->
+    <link defer rel="stylesheet" type="text/css" href="./js/slick/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 
@@ -76,7 +77,7 @@
         <!-- TOP SECTION END-->
 
         <!-- CAROUSEL SECTION START-->
-        <section class="carousel-section" aria-label="join-section">
+        <section class="carousel-section" aria-label="carousel-section">
             <h3 class="carousel-title">הזדמנויות עסקיות חמות עבורך</h3>
             <div class="slick-next">
                 <img src="./images/arrow.png" alt="arrow-right" class="arrow-right">
@@ -237,7 +238,7 @@
         <!-- CAROUSEL SECTION END-->
 <!-- </div> -->
         <!-- ABOUT SECTION END-->
-        <section class="about-section" aria-label="how-section">
+        <section class="about-section" aria-label="about-section">
             <div class="about-right">
                 <img src="./images/brush.png" alt="למה-1" class="about-right-image" width="430" height="215" loading="lazy">
                 <div class="centered">
