small css changes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="top-left">
                 <div class="top-left-logo u-mobile">
-                    <img src="./images/logo.webp" alt="לוגו" class="top-right-logo-img" width="220.703" height="46.227">
+                    <img src="./images/logo-black.webp" alt="לוגו" class="top-right-logo-img" width="220.703" height="46.227"  loading="lazy">
                 </div>
                 <p class="text-green u-desktop">בעלי עסקים, הזדמנות עסקית שאסור לכם לפספס</p>
                 <p class="text-green u-mobile">בעלי עסקים,<br>
@@ -243,7 +243,7 @@
                 <img src="./images/brush.png" alt="למה-1" class="about-right-image" width="430" height="215" loading="lazy">
                 <div class="centered">
                     <p class="about-title">יפעת מכרזים</p>
-                    <p class="about-subtitle">מערכת המכרזים וההזדמנויות העסקיות המובילה והגדולה !בישראל</p>
+                    <p class="about-subtitle">מערכת המכרזים וההזדמנויות העסקיות המובילה והגדולה בישראל!</p>
                 </div>
             </div>
             <div class="about-left">
@@ -260,7 +260,7 @@
         <!-- ADVANTAGE SECTION START-->
         <section class="advantage-section">
             <!-- <div class="advantage-container"> -->
-                <h4 class="advantage-title">!היתרונות שלנו להצלחה העסקית שלכם</h4>
+                <h4 class="advantage-title">היתרונות שלנו להצלחה העסקית שלכם!</h4>
                 <p class="advantage-text">
                     מאות הזדמנויות ומכרזים ממשלתיים ובלעדיים שמפורסמים רק אצלנו<br>
                     בניה, הסעדה, אחזקה, ניקיון, הסעות, ראיית חשבון וכספים, פינוי פסולת, מקרקעין, חשמל ועוד... 74 קטגוריות
@@ -430,8 +430,6 @@
                     $('.divhidden').fadeOut(300);
                 }
             });
-
-
              timerPlus("5e2d900e4369e40017de9383");
         });
     </script>
