small css changes

--- a/index.html
+++ b/index.html
@@ -279,12 +279,12 @@
         <!-- MOBILE CTA START-->
         <div class="mobile-cta text-white">
             <a href="tel:03-5635050" class="mobile-cta-right  bg-green">
-                <img src="./images/trash.webp" alt="טלפון" class="mobile-cta-right-icon" width="30" height="30"
+                <img src="./images/phone.webp" alt="טלפון" class="mobile-cta-right-icon" width="30" height="30"
                     load="lazy">
-                <p class="mobile-cta-title">חייגו לנציג</p>
+                <p class="mobile-cta-title">חייגו <br>לנציג</p>
             </a>
             <div class="mobile-cta-left bg-black" id="ctaButton">
-                <a href="#" class=" text-white">להשארת פרטים לחצו כאן</a>
+                <a href="#" class=" text-white">להשארת פרטים<br> לחצו כאן</a>
             </div>
         </div>
         <!-- MOBILE CTA END-->
