taking down lazy load on image which init on screen

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- TOP SECTION START-->
         <!-- <div class="bg"> -->
             <div class="bg"></div>
-        <img src="./images/pie.webp" alt="פאי" class="bg-float u-desktop" width="374" height="374" loading="lazy">
+        <img src="./images/pie.webp" alt="פאי" class="bg-float u-desktop" width="374" height="374" l>
         <header class="top-section" id="header" aria-label="top-section">
             <div class="footer-circle circle circle u-mobile">
                 <p class="circle-percentage">100%</p>
@@ -51,7 +51,7 @@
 
             <div class="top-left">
                 <div class="top-left-logo u-mobile">
-                    <img src="./images/logo-black.webp" alt="לוגו" class="top-right-logo-img" width="220.703" height="46.227"  loading="lazy">
+                    <img src="./images/logo-black.webp" alt="לוגו" class="top-right-logo-img" width="220.703" height="46.227"  >
                 </div>
                 <p class="text-green u-desktop">בעלי עסקים, הזדמנות עסקית שאסור לכם לפספס</p>
                 <p class="text-green u-mobile">בעלי עסקים,<br>
@@ -341,7 +341,7 @@
             <p class="circle-percentage">100%</p>
             <p class="circle-text text-white">המכרזים בישראל ישירות למייל שלך</p>
         </div>
-        <img class="footer-logo" loading="lazy" width="229" height="118" src="./images/logo.webp" alt="לוגו">
+        <img class="footer-logo" width="229" height="118" src="./images/logo.webp" alt="לוגו">
         <div class="footer-text">
             <p class="footer-title text-green">יפעת מכרזים בהטבה ענקית וחד פעמית</p>
             <p class="footer-subtitle text-white">סוגרים עכשיו מנוי שנתי ונהנים מחודשיים במתנה + *ליווי מכרז ראשון ללא
