taking down lazy load on image which init on screen

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     השאירו פרטים ונחזור אליכם בהקדם
                 </p>
 
-                <p>:לתמיכה טכנית או שירות לקוחות</p>
+                <p>לתמיכה טכנית או שירות לקוחות:</p>
                 <a href="tel:03-5635050">03-5635050</a>
                 <!-- <p>:לנציג מכירות ללא המתנה חייגו</p>
                 <a href="072-3944129">072-3944129</a> -->
