--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     העסקיות החמות, מכרזים
                     ממשלתיים ובלעדיים ומידע על כל מה שקורה בענף שלכם פשוט כך, על מגש של כסף ישירות למייל
                 </p>
-                <a href="#" class="bg-green text-white">אז, מה הפלוסים שלנו?</a>
+                <div class="bg-green text-white"  onclick="moveTo()">אז, מה הפלוסים שלנו?</div >
             </div>
 
         </section>
@@ -416,7 +416,7 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script type="text/javascript" src="https://onandoff.co.il/onAndOff.js"> </script>
     <script>
-        function moveTo(event) { window.scrollTo(0, document.body.scrollHeight); }
+        function moveTo(event) { debugger;window.scrollTo(0, document.body.scrollHeight); }
     </script>
 
     <script>
