--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <div class="u-mobile close" id="close" >X</div>
         <div class="footer-circle circle">
             <p class="circle-percentage">100%</p>
-            <p class="circle-text text-white">המכרזים בישראל ישירות למייל שלך</p>
+            <p class="circle-text text-white">מהמכרזים בישראל ישירות למייל שלך</p>
         </div>
         <img class="footer-logo" width="229" height="118" src="./images/logo.webp" alt="לוגו">
         <div class="footer-text">
